[gd_scene load_steps=2 format=3 uid="uid://hfb6bgyht10u"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_i856a"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_i856a")

[node name="SaveButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 755.0
offset_top = 526.0
offset_right = 1069.0
offset_bottom = 617.0
scale = Vector2(0.989598, 1)
text = "Save File"

[node name="OpenButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 71.0
offset_top = 526.0
offset_right = 385.0
offset_bottom = 617.0
text = "Open File"

[node name="TextEdit" type="TextEdit" parent="Control"]
layout_mode = 0
offset_left = 299.0
offset_top = 335.0
offset_right = 812.0
offset_bottom = 414.0

[node name="CreateButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 465.0
offset_top = 526.0
offset_right = 682.0
offset_bottom = 617.0
text = "Create File"

[node name="TxtButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 325.0
offset_top = 108.0
offset_right = 495.0
offset_bottom = 168.0
text = "Txt"

[node name="JsonButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 614.0
offset_top = 108.0
offset_right = 784.0
offset_bottom = 168.0
text = "Json"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 218.0
offset_top = 31.0
offset_right = 941.0
offset_bottom = 136.0
theme_override_font_sizes/font_size = 30
text = "Choose export format/ Выбери формат экспорта"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 394.0
offset_top = 237.0
offset_right = 853.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 30
text = "File text/ Текст файла"
